# apple-flow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
docs/: AI_INSTALL_MASTER_PROMPT.md  BEGINNER_SETUP_10_MIN.md  ENV_SETUP.md  QUICKSTART.md
docs/plans/: 2026-03-05-imessage-echo-loop-hardening.md
scripts/: ollama_bench.py  setup_autostart.sh  start_beginner.sh
skills/apple-flow-gateways/: SKILL.md
skills/apple-flow-mail/: SKILL.md
skills/apple-flow-numbers/: SKILL.md
skills/apple-flow-pages/: SKILL.md
src/apple_flow/: __init__.py  __main__.py  admin_client.py  apple_tools.py  approval.py  attachments.py  calendar_ingress.py  claude_cli_connector.py  cli_control.py  cline_connector.py  codex_cli_connector.py  companion.py  config.py  config_schema.py  csv_audit.py  daemon.py  egress.py  gateway_health.py  gateway_setup.py  gemini_cli_connector.py  ingress.py  kilo_cli_connector.py  mail_ingress.py  main.py  notes_ingress.py  ollama_connector.py  orchestrator.py  osascript_utils.py  reminders_egress.py  reminders_ingress.py  setup_wizard.py  store.py  streaming_subprocess.py
tests/: test_admin_api.py  test_apple_tools.py  test_attachment_processor.py  test_attachments.py  test_calendar_ingress.py  test_claude_cli_connector.py  test_cli_connector.py  test_cli_control.py  test_cline_connector.py  test_companion.py  test_config.py  test_csv_audit.py  test_daemon_startup.py  test_egress.py  test_gemini_cli_connector.py  test_health_dashboard.py  test_ingress_attributed.py  test_kilo_cli_connector.py  test_main_tools.py  test_numbers_insert_semantics_integration.py  test_numbers_style_integration.py  test_numbers_workbook_integration.py  test_ollama_connector.py  test_orchestrator.py  test_osascript_utils.py  test_progress_streaming.py  test_setup_scripts.py  test_setup_wizard.py  test_store.py  test_streaming_subprocess.py
